<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_with_icon" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/default_margin_16">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilRequestName"
                style="@style/TextFieldInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="0dp"
                app:counterEnabled="true"
                app:counterMaxLength="255">

                <EditText
                    android:id="@+id/etRequestName"
                    style="@style/EditText.Theme"
                    android:layout_height="@dimen/edit_text_request_height"
                    android:hint="@string/hint_name_request"
                    android:maxLength="255"
                    android:translationY="-4dp"
                    tools:ignore="Autofill,LabelFor" />


            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvRequestNameError"
                style="@style/Text.Error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_minus_18"
                android:text="@string/label_error_request_name_empty"
                android:visibility="gone" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_4">

                <TextView
                    style="@style/Text.Hint.12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:text="@string/label_criticality" />

                <Spinner
                    android:id="@+id/spinnerTypeCritical"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:background="@drawable/bg_spinner" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:contentDescription="@string/content_select_criticality"
                    android:src="@drawable/ic_spinner_arrow_drop_down" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_4">

                <TextView
                    style="@style/Text.Hint.12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:text="@string/label_type" />

                <Spinner
                    android:id="@+id/spinnerTypeRequest"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:background="@drawable/bg_spinner" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:contentDescription="@string/content_select_type_request"
                    android:src="@drawable/ic_spinner_arrow_drop_down" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilRequestDescription"
                    style="@style/TextFieldInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:counterEnabled="true"
                    app:counterMaxLength="4095">

                    <EditText
                        android:id="@+id/etRequestDescription"
                        style="@style/EditText.Theme"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/bg_dot_white"
                        android:drawablePadding="@dimen/default_margin_24"
                        android:gravity="top"
                        android:hint="@string/hint_description_request"
                        android:inputType="textAutoComplete|textMultiLine"
                        android:maxLength="4095"
                        android:minHeight="@dimen/edit_text_request_height"
                        android:paddingTop="@dimen/default_margin_8"
                        android:translationY="-4dp"
                        tools:ignore="Autofill,LabelFor" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/ivAddFiles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_marginBottom="@dimen/default_margin_32"
                    android:contentDescription="@string/content_add_picture"
                    android:src="@drawable/ic_request_add_photo" />

            </FrameLayout>

            <TextView
                android:id="@+id/tvRequestDescriptionError"
                style="@style/Text.Error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_minus_18"
                android:text="@string/label_error_request_description_empty"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvFiles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_8" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Text.Hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|start"
                        android:layout_marginTop="@dimen/default_margin_12"
                        android:drawableStart="@drawable/ic_request_place_map"
                        android:drawablePadding="@dimen/default_margin_4"
                        android:text="@string/label_location" />

                    <TextView
                        android:id="@+id/tvCoordinates"
                        style="@style/Text.16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|start"
                        android:minWidth="@dimen/tv_coordinates_min_width"
                        android:padding="@dimen/default_margin_4"
                        tools:text="@string/label_location" />

                    <TextView
                        android:id="@+id/tvSpecifyCoordinates"
                        style="@style/Text.Error"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_specify_coordinates"
                        android:visibility="gone" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvButtonClarify"
                    style="@style/Text.Bold.Primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:foreground="?selectableItemBackgroundBorderless"
                    android:text="@string/btn_clarify" />

            </FrameLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <include layout="@layout/layout_progress" />

</androidx.constraintlayout.widget.ConstraintLayout>