<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/toolbar_with_icon" />

        <TextView
            style="@style/Text.Hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/default_margin_16"
            android:layout_marginTop="@dimen/default_margin_24"
            android:text="@string/label_language" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rbRussian"
                style="@style/RadioButton"
                android:paddingStart="@dimen/default_margin_16"
                android:paddingTop="@dimen/default_margin_4"
                android:paddingEnd="@dimen/default_margin_16"
                android:paddingBottom="@dimen/default_margin_4"
                android:text="@string/label_russian_language" />

            <RadioButton
                android:id="@+id/rbEnglish"
                style="@style/RadioButton"
                android:paddingStart="@dimen/default_margin_16"
                android:paddingTop="@dimen/default_margin_4"
                android:paddingEnd="@dimen/default_margin_16"
                android:paddingBottom="@dimen/default_margin_4"
                android:text="@string/label_english_language" />
        </RadioGroup>

    </LinearLayout>

    <include layout="@layout/layout_progress" />

</FrameLayout>